tests/01-syntax/inv_msg.ml
let () = LOG 0 LEVEL DEBUG
